--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "devDependencies": {
     "@astrojs/solid-js": "0.1.2",
-    "@astrojs/tailwind": "0.2.1",
     "@babel/core": "7.18.0",
     "astro": "1.0.0-beta.31",
-    "solid-js": "1.3.6",
+    "postcss": "8.4.14",
+    "postcss-nesting": "10.1.7",
+    "postcss-preset-env": "^7.6.0",
+    "solid-js": "1.4.2",
+    "tailwindcss": "3.0.24",
     "typescript": "4.6.4"
   }
 }
