--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "@astrojs/solid-js": "0.1.2",
     "@babel/core": "7.18.0",
+    "@prisma/client": "3.14.0",
     "astro": "1.0.0-beta.31",
     "postcss": "8.4.14",
     "postcss-nesting": "10.1.7",
     "postcss-preset-env": "^7.6.0",
+    "prisma": "3.14.0",
     "solid-js": "1.4.2",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.4"
