--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/netlify": "0.4.0",
     "@astrojs/solid-js": "0.1.2",
     "@babel/core": "7.18.0",
     "@prisma/client": "3.14.0",
