--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "postcss-preset-env": "^7.6.0",
     "prisma": "3.14.0",
     "solid-js": "1.4.2",
+    "solid-zustand": "1.4.0",
     "tailwindcss": "3.0.24",
-    "typescript": "4.6.4"
-  }
+    "typescript": "4.6.4",
+    "zustand": "4.0.0-rc.1"
+  },
+  "strict-peer-dependencies": false
 }
