--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "astro": "1.0.0-beta.31",
     "postcss": "8.4.14",
     "postcss-nesting": "10.1.7",
-    "postcss-preset-env": "^7.6.0",
+    "postcss-preset-env": "7.6.0",
     "prisma": "3.14.0",
     "solid-js": "1.4.2",
+    "solid-transition-group": "0.0.10",
     "solid-zustand": "1.4.0",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.4",
