--- a/.github/workflows/ci-front.yml
+++ b/.github/workflows/ci-front.yml
@@ -5,7 +5,8 @@ on:
     branches:
     - main
     paths:
-    - './front/*'
+    - 'front/*'
+    - '.github/workflows/ci-front.yml'
 
 env:
   ENABLE_VC_BUILD: 1
