--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "3.14.0",
     "astro": "1.0.0-beta.31",
     "autoprefixer": "github:postcss/autoprefixer",
+    "party-js": "2.1.2",
     "postcss": "8.4.14",
     "postcss-nesting": "10.1.7",
     "postcss-preset-env": "7.6.0",
