--- a/front/.gitignore
+++ b/front/.gitignore
@@ -11,13 +11,5 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
-.DS_Store
-
-# Local vercel folder
+# local vercel folder
 .vercel
