--- a/front/package.json
+++ b/front/package.json
@@ -30,5 +30,6 @@
     "typescript": "4.6.4",
     "zustand": "4.0.0-rc.1"
   },
-  "strict-peer-dependencies": false
+  "strict-peer-dependencies": false,
+  "type": "commonjs"
 }
