🔑  You now need to login instead of using the token

--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "connect": "pscale connect todo --port 3309",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
@@ -16,6 +17,7 @@
     "@prisma/client": "3.14.0",
     "astro": "1.0.0-beta.31",
     "autoprefixer": "10.4.7",
+    "js-cookie": "3.0.1",
     "postcss": "8.4.14",
     "postcss-nesting": "10.1.7",
     "postcss-preset-env": "7.6.0",
