--- a/front/package.json
+++ b/front/package.json
@@ -14,14 +14,16 @@
     "@astrojs/solid-js": "0.1.2",
     "@astrojs/vercel": "0.2.2",
     "@babel/core": "7.18.0",
-    "@prisma/client": "3.14.0",
+    "@prisma/client": "3.15.1",
+    "@types/luxon": "2.3.2",
     "astro": "1.0.0-beta.31",
     "autoprefixer": "10.4.7",
     "js-cookie": "3.0.1",
+    "luxon": "2.4.0",
     "postcss": "8.4.14",
     "postcss-nesting": "10.1.7",
     "postcss-preset-env": "7.6.0",
-    "prisma": "3.14.0",
+    "prisma": "3.15.1",
     "solid-js": "1.4.2",
     "solid-transition-group": "0.0.10",
     "solid-zustand": "1.4.0",
